# django-poetry-vercel

./: extensions_install.sh  pyproject.toml  vercel.json
example/: urls.py
project/: settings.py  urls.py
