[tool.poetry]
name = "django-poetry-vercel"
version = "0.1.0"
description = ""
authors = ["Felipe Augusto <augustto.felipe@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
